Fix the product page slider on mobile  (#231)
## JIRA Ticket


## QA Steps

-  [ ] `pnpm i`
-  [ ] `pnpm dev`

## Note

Leave empty when you have nothing to say

--- a/styles/product.scss
+++ b/styles/product.scss
@@ -102,6 +102,16 @@
           height: 100% !important;
           margin: 0;
         }
+
+        @include max-screen('md') {
+          width: 100% !important;
+        }
+      }
+
+      .splide__list {
+        @include max-screen('md') {
+          flex-direction: column;
+        }
       }
 
       .splide__arrow {
